--- a/docs/node/docs/pages/getting-started.mdx
+++ b/docs/node/docs/pages/getting-started.mdx
@@ -14,7 +14,7 @@ npm install tevm
 ```
 
 ```ts
-import { createMemoryClient, http } from 'tevm'
+import { createMemoryClient, http } from 'tevm/node'
 import { optimism } from 'tevm/common'
 
 // Create a client that forks from Optimism mainnet
