--- a/docs/node/docs/pages/api/memory-client.mdx
+++ b/docs/node/docs/pages/api/memory-client.mdx
@@ -22,7 +22,7 @@ While **MemoryClient** is the most convenient way to use Tevm, it's less tree-sh
 ## 1. Installation & Getting Started
 
 ```ts
-import { createMemoryClient } from "tevm";
+import { createMemoryClient } from "tevm/memory-client"
 
 // A simple MemoryClient that runs in-memory with no forking
 const client = createMemoryClient();
@@ -34,8 +34,8 @@ console.log(blockNumber); // => 0n in a fresh chain with no blocks
 
 **Fork a chain**:
 ```ts
-import { createMemoryClient, http } from "tevm";
-import { optimism } from "tevm/common";
+import { createMemoryClient, http } from "tevm/memory-client"
+import { optimism } from "tevm/chains"
 
 const forkedClient = createMemoryClient({
   fork: {
@@ -76,37 +76,37 @@ When you create a `MemoryClient`, you get:
 ### 3.1 Deploy & Interact with a Contract
 
 ```ts
-import { createMemoryClient } from "tevm";
-import { SimpleContract } from "@tevm/contract"; // A precompiled minimal contract
-import { privateKeyToAccount } from "viem/accounts";
+import { createMemoryClient } from "tevm/memory-client"
+import { SimpleContract } from "tevm/contract" // A precompiled minimal contract
+import { privateKeyToAccount } from "viem/accounts"
 
 // Provide an account for signing
-const signerAccount = privateKeyToAccount("0x59c6...b78690d");
+const signerAccount = privateKeyToAccount("0x59c6...b78690d")
 const memoryClient = createMemoryClient({
   account: signerAccount,
-});
+})
 
 // Deploy the `SimpleContract` with initial value = 2
-const txHash = await memoryClient.deployContract(SimpleContract.deploy(2n));
+const txHash = await memoryClient.deployContract(SimpleContract.deploy(2n))
 
 // By default, TEVM is in "manual" mining, so we call:
-await memoryClient.mine({ blocks: 1 });
+await memoryClient.mine({ blocks: 1 })
 
 // Grab the receipt
-const receipt = await memoryClient.getTransactionReceipt({ hash: txHash });
-if (!receipt.contractAddress) throw new Error("Deployment failed");
+const receipt = await memoryClient.getTransactionReceipt({ hash: txHash })
+if (!receipt.contractAddress) throw new Error("Deployment failed")
 
 // Now read from the contract
-const contract = SimpleContract.withAddress(receipt.contractAddress);
-const currentValue = await memoryClient.readContract(contract.read.get());
-console.log("Current value:", currentValue); // => 2n
+const contract = SimpleContract.withAddress(receipt.contractAddress)
+const currentValue = await memoryClient.readContract(contract.read.get())
+console.log("Current value:", currentValue) // => 2n
 
 // Write/Update the contract
-const setHash = await memoryClient.writeContract(contract.write.set(420n));
-await memoryClient.mine({ blocks: 1 });
+const setHash = await memoryClient.writeContract(contract.write.set(420n))
+await memoryClient.mine({ blocks: 1 })
 
-const newValue = await memoryClient.readContract(contract.read.get());
-console.log("New value:", newValue); // => 420n
+const newValue = await memoryClient.readContract(contract.read.get())
+console.log("New value:", newValue) // => 420n
 ```
 
 **Key Points**:
@@ -117,9 +117,9 @@ console.log("New value:", newValue); // => 420n
 ### 3.2 Forking & Reading On-Chain Data
 
 ```ts
-import { createMemoryClient, http } from "tevm";
-import { optimism } from "tevm/common";
-import { ERC20 } from "@tevm/contract";
+import { createMemoryClient, http } from "tevm/memory-client"
+import { optimism } from "tevm/chains"
+import { ERC20 } from "tevm/contract"
 
 const memoryClient = createMemoryClient({
   fork: {
@@ -127,14 +127,14 @@ const memoryClient = createMemoryClient({
     blockTag: 17400000n,
   },
   common: optimism,
-});
+})
 
 // The contract "DAI" on Optimism
-const Dai = ERC20.withAddress("0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1");
+const Dai = ERC20.withAddress("0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1")
 
 // Read balance of an address
-const balance = await memoryClient.readContract(Dai.read.balanceOf("0xf0d4c12a5768d806021f80a262b4d39d26c58b8d"));
-console.log(balance);
+const balance = await memoryClient.readContract(Dai.read.balanceOf("0xf0d4c12a5768d806021f80a262b4d39d26c58b8d"))
+console.log(balance)
 ```
 
 Because we forked from real data, `balance` now reflects the state at block 17,400,000 on Optimism.
@@ -156,7 +156,7 @@ If you'd rather each tx be instantly mined, set:
 ```ts
 const autoMiningClient = createMemoryClient({
   miningConfig: { type: 'auto' },
-});
+})
 ```
 Now every "write" transaction is immediately confirmed.
 
@@ -195,7 +195,7 @@ const result = await memoryClient.tevmCall({
   data: "0x...",
   skipBalance: true,
   skipNonce: true,
-});
+})
 // This simulates a transaction in the local EVM but doesn't finalize it until we mine or confirm it.
 ```
 
@@ -204,7 +204,7 @@ const result = await memoryClient.tevmCall({
 Run a contract operation in a Tevm-specific manner:
 
 ```ts
-import { ERC20 } from "@tevm/contract";
+import { ERC20 } from "tevm/contract"
 
 const result = await memoryClient.tevmContract({
   ...ERC20.read.balanceOf("0xf0d4c12a..."),
@@ -219,7 +219,7 @@ console.log(result.logs) // => logs from the call
 Deploy a contract purely using TEVM logic:
 
 ```ts
-import { SimpleContract } from "@tevm/contract";
+import { SimpleContract } from "tevm/contract"
 
 const deployResult = await memoryClient.tevmDeploy(SimpleContract.deploy(2n));
 await memoryClient.mine();
@@ -234,10 +234,10 @@ console.log(deployResult.createdAddress);
 MemoryClient itself is an EIP-1193 provider, so:
 
 - You can pass `memoryClient.request` to any library expecting an EIP-1193 transport (e.g., `createPublicClient({ transport: custom(memoryClient.request) })`).
-- Or stand up an RPC server with `@tevm/server`:
+- Or stand up an RPC server with `tevm/server`:
 
 ```ts
-import { createServer } from "tevm/server";
+import { createServer } from "tevm/server"
 
 const server = createServer({
   request: memoryClient.request,
@@ -254,7 +254,7 @@ Now external tools (Remix, Hardhat, Foundry) can treat it like "anvil/hardhat" l
 You can persist your MemoryClient state across sessions by providing a `persister`. For example, storing all contract states in `localStorage`:
 
 ```ts
-import { createMemoryClient, createSyncPersister } from 'tevm';
+import { createMemoryClient, createSyncPersister } from 'tevm/memory-client'
 
 const clientWithPersistence = createMemoryClient({
   persister: createSyncPersister({ storage: localStorage }),
