--- a/docs/node/docs/pages/core/forking.mdx
+++ b/docs/node/docs/pages/core/forking.mdx
@@ -4,6 +4,7 @@ description: How to fork from live networks and other Tevm instances
 ---
 
 import { Callout } from 'vocs/components'
+import { createTevmNode, http } from 'tevm/node'
 
 # Forking Networks
 
@@ -18,8 +19,7 @@ Tevm's forking capability allows you to create a local instance that mirrors the
 
 ### TypeScript
 ```ts
-import { createTevmNode } from '@tevm/node'
-import { http } from 'viem'
+import { createTevmNode, http } from 'tevm/node'
 
 const node = createTevmNode({
   fork: {
@@ -33,8 +33,7 @@ await node.ready()
 
 ### JavaScript
 ```js
-const { createTevmNode } = require('@tevm/node')
-const { http } = require('viem')
+const { createTevmNode, http } = require('tevm/node')
 
 const node = createTevmNode({
   fork: {
