:bug: Fix: docs build

--- a/docs/node/docs/pages/advanced/performance-profiler.mdx
+++ b/docs/node/docs/pages/advanced/performance-profiler.mdx
@@ -12,7 +12,7 @@ Tevm Node includes a built-in performance profiler that helps you analyze EVM ex
 Enable profiling when creating your node:
 
 ```ts
-import { createTevmNode } from '@tevm/node'
+import { createTevmNode } from 'tevm/node'
 
 const node = createTevmNode({
   profiler: {
