--- a/docs/node/docs/pages/api/tevm-call.mdx
+++ b/docs/node/docs/pages/api/tevm-call.mdx
@@ -3,6 +3,8 @@ title: tevmCall API
 description: Detailed documentation of the tevmCall action
 ---
 
+import { Callout } from 'vocs/components'
+
 # tevmCall API
 
 The `tevmCall` action is one of the most important APIs in Tevm, covering 90% of use cases along with `tevmMine`. It provides a powerful interface for executing EVM calls with extensive configuration options.
