--- a/docs/node/docs/pages/core/managing-state.mdx
+++ b/docs/node/docs/pages/core/managing-state.mdx
@@ -40,7 +40,7 @@ if (account) {
 ### Modifying Accounts
 
 ```ts
-import { EthjsAccount } from 'tevm/node'
+import { EthjsAccount } from 'tevm/utils'
 
 // Create or update an account
 await stateManager.putAccount(
