--- a/docs/node/docs/pages/introduction/installation.mdx
+++ b/docs/node/docs/pages/introduction/installation.mdx
@@ -23,7 +23,7 @@ bun add @tevm/node
 ## 2. Quick Start
 
 ```ts
-import { createTevmNode } from '@tevm/node'
+import { createTevmNode } from 'tevm/node'
 
 // Create an instance
 const node = createTevmNode()
@@ -37,5 +37,5 @@ console.log(await vm.blockchain.getBlockByTag('latest'))
 
 ## 3. Next Steps
 
-- Explore the [Core Concepts](../core/create-tevm-node)  
-- Check out [Examples](../examples/local-testing) 
+- Explore the [Core Concepts](../core/create-tevm-node)
+- Check out [Examples](../examples/local-testing)
