--- a/docs/node/docs/pages/advanced/custom-precompiles.mdx
+++ b/docs/node/docs/pages/advanced/custom-precompiles.mdx
@@ -12,19 +12,19 @@ description: Extend EVM with JavaScript-based precompile at a given address
 The `@tevm/precompiles` package provides utilities for creating type-safe precompiles from contract [ABIs](https://docs.soliditylang.org/en/latest/abi-spec.html):
 
 ```ts
-import { defineCall } from '@tevm/precompiles'
-import { SimpleContract } from '@tevm/contract'
+import { defineCall } from 'tevm/precompiles'
+import { SimpleContract } from 'tevm/contract'
 
 // Create a stateful precompile
 let value = 0n
 
 const call = defineCall(SimpleContract.abi, {
   // Read method
-  get: async () => ({ 
+  get: async () => ({
     returnValue: value,
     executionGasUsed: 100n
   }),
-  
+
   // Write method with events
   set: async ({ args }) => {
     const [newValue] = args
@@ -51,14 +51,14 @@ const precompile = definePrecompile({
 ## Basic Usage
 
 ```ts
-import { createTevmNode, definePrecompile } from '@tevm/node'
+import { createTevmNode, definePrecompile } from 'tevm/node'
 
 const myPrecompile = definePrecompile({
   address: '0xf2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2f2',
   call: async ({ data, gasLimit }) => {
     // Process input data
     const processedData = processData(data)
-    
+
     return {
       returnValue: new Uint8Array([...processedData]),
       executionGasUsed: 200n,
@@ -107,7 +107,7 @@ const stringPrecompile = definePrecompile({
     // Decode function selector and parameters
     const selector = data.slice(0, 4)
     const params = data.slice(4)
-    
+
     if (selector.equals(toBytes('toUpper(string)'))) {
       const str = decodeString(params)
       const result = str.toUpperCase()
@@ -116,7 +116,7 @@ const stringPrecompile = definePrecompile({
         executionGasUsed: BigInt(str.length * 10), // Gas based on input size
       }
     }
-    
+
     throw new Error('Unknown function selector')
   },
 })
@@ -125,14 +125,14 @@ const stringPrecompile = definePrecompile({
 ### 2. Cryptographic Precompile
 
 ```ts
-import { keccak256 } from '@tevm/utils'
+import { keccak256 } from 'tevm/utils'
 
 const cryptoPrecompile = definePrecompile({
   address: '0x0000000000000000000000000000000000000456',
   call: async ({ data }) => {
     const selector = data.slice(0, 4)
     const input = data.slice(4)
-    
+
     switch (selector.toString('hex')) {
       case 'hash':
         const hash = keccak256(input)
@@ -153,13 +153,13 @@ const apiPrecompile = definePrecompile({
   address: '0x0000000000000000000000000000000000000789',
   call: async ({ data }) => {
     const { method, url, params } = decodeApiCall(data)
-    
+
     try {
       const response = await fetch(url, {
         method,
         body: JSON.stringify(params),
       })
-      
+
       const result = await response.json()
       return {
         returnValue: encodeResult(result),
@@ -175,7 +175,7 @@ const apiPrecompile = definePrecompile({
 ### 4. Stateful Precompile with Events
 
 ```ts
-import { defineCall } from '@tevm/precompiles'
+import { defineCall } from 'tevm/precompiles'
 
 // Define contract ABI
 const abi = [
@@ -192,11 +192,11 @@ const statefulCall = defineCall(abi, {
     returnValue: storedValue,
     executionGasUsed: 100n,
   }),
-  
+
   setValue: async ({ args }) => {
     const oldValue = storedValue
     storedValue = args[0]
-    
+
     return {
       returnValue: undefined,
       executionGasUsed: 200n,
@@ -226,7 +226,7 @@ interface IStringPrecompile {
 
 contract MyContract {
     IStringPrecompile constant strUtils = IStringPrecompile(0x0000000000000000000000000000000000000123);
-    
+
     function processString(string calldata input) external view returns (string memory) {
         return strUtils.toUpper(input);
     }
@@ -265,12 +265,12 @@ For more information on gas costs, see the [EVM Gas and Fees](https://ethereum.o
      address: '0x789...',
      call: async ({ data }) => {
        let gas = 0n
-       
+
        // Track gas for each operation
        for (const op of operations) {
          gas += calculateOpGas(op)
        }
-       
+
        return {
          returnValue: result,
          executionGasUsed: gas,
@@ -306,7 +306,7 @@ const call = defineCall(abi, {
    ```ts
    // Maintain connection pool
    const connections = new Map()
-   
+
    const precompile = definePrecompile({
      address: '0x789...',
      call: async ({ data }) => {
@@ -315,7 +315,7 @@ const call = defineCall(abi, {
          conn = await createConnection()
          connections.set(data.toString(), conn)
        }
-       
+
        try {
          return await useConnection(conn)
        } finally {
@@ -338,7 +338,7 @@ const call = defineCall(abi, {
 The `defineCall` utility provides full [type safety](https://www.typescriptlang.org/docs/handbook/2/types-from-types.html) for your precompiles:
 
 ```ts
-import { defineCall } from '@tevm/precompiles'
+import { defineCall } from 'tevm/precompiles'
 
 // ABI with types
 const abi = [
@@ -353,7 +353,7 @@ const call = defineCall(abi, {
     returnValue: a + b,
     executionGasUsed: 100n,
   }),
-  
+
   sub: async ({ args: [a, b] }) => ({
     returnValue: a - b,
     executionGasUsed: 100n,
@@ -367,4 +367,4 @@ const call = defineCall(abi, {
 - [JSON-RPC Support](../api/json-rpc)
 - [EVM Opcodes Reference](https://www.evm.codes/)
 - [Ethereum Yellow Paper](https://ethereum.github.io/yellowpaper/paper.pdf)
-- [ethereumjs/ethereumjs-monorepo](https://github.com/ethereumjs/ethereumjs-monorepo) 
+- [ethereumjs/ethereumjs-monorepo](https://github.com/ethereumjs/ethereumjs-monorepo)
