--- a/docs/node/docs/pages/examples/viem.mdx
+++ b/docs/node/docs/pages/examples/viem.mdx
@@ -10,8 +10,8 @@ This guide demonstrates how to use Tevm Node with Viem, enabling seamless integr
 ## Basic Setup
 
 ```ts
-import { createTevmNode } from '@tevm/node'
-import { requestEip1193 } from '@tevm/node/decorators'
+import { createTevmNode } from 'tevm/node'
+import { requestEip1193 } from 'tevm/decorators'
 import { createPublicClient, custom } from 'viem'
 import { mainnet } from 'viem/chains'
 
@@ -235,7 +235,7 @@ test('Contract interaction', async () => {
     chain: mainnet,
     transport: custom(node.request),
   })
-  
+
   // Deploy contract
   const hash = await client.deployContract({
     abi,
@@ -243,14 +243,14 @@ test('Contract interaction', async () => {
   })
   const receipt = await client.waitForTransactionReceipt({ hash })
   const contractAddress = receipt.contractAddress
-  
+
   // Test contract
   const result = await client.readContract({
     address: contractAddress,
     abi,
     functionName: 'getValue',
   })
-  
+
   expect(result).toBe(expectedValue)
 })
 ```
@@ -282,7 +282,7 @@ test('Contract interaction', async () => {
      functionName: 'transfer',
      args: [to, amount],
    })
-   
+
    const hash = await client.writeContract({
      address,
      abi,
@@ -309,7 +309,7 @@ test('Contract interaction', async () => {
      address,
      event: parseAbi(['event Transfer(...)']),
    })
-   
+
    try {
      // Use filter
    } finally {
@@ -320,4 +320,4 @@ test('Contract interaction', async () => {
 ## Related Topics
 - [JSON-RPC Support](../api/json-rpc)
 - [Local Testing](./local-testing)
-- [Forking Mainnet](./forking-mainnet) 
+- [Forking Mainnet](./forking-mainnet)
