--- a/docs/node/docs/pages/getting-started.mdx
+++ b/docs/node/docs/pages/getting-started.mdx
@@ -14,7 +14,7 @@ npm install tevm
 ```
 
 ```ts
-import { createMemoryClient, http } from 'tevm/node'
+import { createMemoryClient, http } from 'tevm'
 import { optimism } from 'tevm/common'
 
 // Create a client that forks from Optimism mainnet
@@ -28,7 +28,7 @@ const client = createMemoryClient({
 
 // Read block data using viem's public actions
 const block = await client.getBlock({ blockTag: 420n })
-console.log(block) // Block data from Optimism mainnet at block 420
+console.log(block)
 ```
 
 ## Quick Start
@@ -98,26 +98,3 @@ Dive deeper into advanced capabilities:
 - [EVM Deep Dive](https://ethereum.org/en/developers/docs/evm/) - Understanding the EVM
 - [JSON-RPC API](https://ethereum.org/en/developers/docs/apis/json-rpc/) - Standard Ethereum API
 - [ethereumjs/ethereumjs-monorepo](https://github.com/ethereumjs/ethereumjs-monorepo) - Core EVM implementation
-
-### Debugging Example
-```ts
-import { createTevmNode } from 'tevm/node'
-
-const node = createTevmNode()
-const vm = await node.getVm()
-
-// Listen to EVM execution events
-vm.evm.events?.on('step', (step, next) => {
-  console.log('Executing opcode:', step.opcode.name)
-  next?.()
-})
-
-vm.evm.events?.on('afterMessage', (result, next) => {
-  if (result.execResult.exceptionError) {
-    console.error('Error:', result.execResult.exceptionError)
-  }
-  next?.()
-})
-
-// Your contract interactions here...
-```
